FEAT: início da adição de Kafka.

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -32,3 +32,14 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
+  kafka:
+    bootstrap-servers: localhost:9092  # Ou seu broker (ex.: Kafka em Docker)
+    #    bootstrap-servers: ${KAFKA_BROKER:kafka:9092}
+    topic:
+      consulta-informar-paciente: consulta-informar-paciente  # Nome do tópico para enviar ConsultaDto
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer  # Para JSON
+      properties:
+        spring.json.add.type.headers: false  # Opcional: Evita headers de tipo para simplicidade
