--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,8 +3,6 @@
 #volumes:
 #  database_hospital:
 #    name: database_hospital
-volumes:
-  kafka-data:
 
 networks:
   communication: # conexão com infra-local e acesso a internet - tipo bridge
@@ -20,15 +18,15 @@ services:
       - "9092:9092"
     environment:
       # Ativa o modo KRaft (sem Zookeeper)
-      - KAFKA_ENABLE_KRAFT=yes
-      - KAFKA_CFG_PROCESS_ROLES=broker,controller
-      - KAFKA_CFG_NODE_ID=1
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@localhost:9093
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_ENABLE_KRAFT=yes # Habilita o modo KRaft (sem Zookeeper)
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller # Define os papéis do nó - broker e controller - necessário para KRaft
+      - KAFKA_CFG_NODE_ID=1 # ID único do nó no cluster
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@localhost:9093 # Define o votante do controller - necessário para KRaft
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093 # Define os listeners para broker e controller
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092 # Endereço que os clientes usarão para se conectar ao broker
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT # Mapeia os protocolos de segurança dos listeners
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER # Define o listener do controller
+      - ALLOW_PLAINTEXT_LISTENER=yes # Permite listener sem criptografia
     restart: unless-stopped
 
 #  challenge_hospital:
