--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,18 +20,32 @@ spring:
     restart:
       additional-exclude: logs/**
 
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password:
+  datasource: # Configura o datasource do banco de dados.
+    driver-class-name: org.postgresql.Driver # Especifica o driver JDBC (neste caso, para Postgres).
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:challenge_user} # Define a URL de conexao ao banco.
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
 
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+  jpa: # Configura o JPA/Hibernate.
     hibernate:
-      ddl-auto: create-drop
-    defer-datasource-initialization: true
-    show-sql: true
+      ddl-auto: create-drop # Define a estrategia de criacao do schema do banco de dados. Pode ser 'none', 'validate', 'update', 'create', 'create-drop'.
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl # Define a estrategia de nomeacao fisica (padrao). Usar CamelCase no Java e snake_case no banco.
+    defer-datasource-initialization: true # Adia a execução do import.sql até que o schema JPA esteja inicializado
+    properties:
+      hibernate: # Configuracoes avancadas do Hibernate.
+        format_sql: true # Formata o SQL gerado para melhor legibilidade.
+        use_sql_comments: true # Adiciona comentarios ao SQL gerado.
+        connection: # Define o nivel de isolamento de transacao.
+          isolation: 2 # Nivel 2 de isolamento recomendado para a maioria dos casos. - 1 = READ_UNCOMMITTED, 2 = READ_COMMITTED, 4 = REPEATABLE_READ, 8 = SERIALIZABLE
+        cache:
+          use_second_level_cache: false # Habilita cache de segundo nivel. False desabilitado para garantir dados sempre atualizados.
+          use_query_cache: false # Habilita cache de consultas. False desabilitado para garantir dados sempre atualizados.
+        type:
+          enumType:
+            type: pgsql_enum # Define o mapeamento de enums para PostgreSQL. Usar 'pgsql_enum' para suporte nativo a enums do PostgreSQL.
+    open-in-view: false #  Define se o Hibernate deve manter a sessao aberta durante a renderizacao da view. O false e recomendado para evitar problemas de performance e lazy loading.
+    show-sql: true # Habilita a exibicao do SQL gerado no console.
 
   sql: # Esta propriedade controla quando e como o Spring Boot inicializa o banco de dados com scripts SQL
     init:
@@ -45,9 +59,8 @@ spring:
   messages: # Configuracao de mensagem para login personalizado
     basename: messages
 
-  #    bootstrap-servers: ${KAFKA_BROKER:kafka:9092}
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: kafka:9092
     topic:
       evento-informar-paciente-consulta: evento-informar-paciente-consulta
       evento-atualizar-status-consulta: evento-atualizar-status-consulta
@@ -57,7 +70,7 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
-        spring.json.trusted.packages: "fiap.adj.fase3" # Pacote confiável para desserialização - Asterisco para confiar em todos
+        spring.json.trusted.packages: "*" # Asterisco para confiar em todos os pacotes para deserializacao
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer  # Para JSON
